Made some notes from the feature/wip-on-pact branch.

--- a/content/en/docs/Microservices Dev Bootcamp/010. Angular SPA/048. Pact.md
+++ b/content/en/docs/Microservices Dev Bootcamp/010. Angular SPA/048. Pact.md
@@ -148,243 +148,152 @@ Commit with the comment "Renamed spec to backend.pact.spec.ts.".
 src\app\pact\backend.pact.spec.ts
 
 ~~~
-import { PactWeb } from '@pact-foundation/pact-web';
-import { Observable } from 'rxjs';
-// TODO: Consider committing https://raw.githubusercontent.com/pact-foundation/pact-js/master/examples/karma/jasmine/client-spec.js as an interim commit.
+import { environment } from 'src/environments/environment';
 
-import { HttpClientTestingModule } from '@angular/common/http/testing';
-import { fakeAsync, TestBed } from '@angular/core/testing';
-import { BackendService } from '../core/singleton-services/backend/backend.service';
+// Current state: This isn't going to work when multiple browser windows are
+// running in parallel. Will need to rethink. Probably will have to run this
+// as a one-off test.
+
 import { InjectionToken } from '@angular/core';
 import { HttpClient } from '@angular/common/http';
 import { Movie } from '../core/singleton-services/backend/movie';
+import { PactWeb } from '@pact-foundation/pact-web';
+import { Observable } from 'rxjs';
+import { HttpClientTestingModule } from '@angular/common/http/testing';
+import { fakeAsync, TestBed } from '@angular/core/testing';
+import { BackendService } from '../core/singleton-services/backend/backend.service';
+import { ConfigService } from '../core/singleton-services/config/config.service';
+import { mockProvider } from '@ngneat/spectator';
 
-// export const BACKEND_BASE_URL = new InjectionToken<string>('BACKEND_BASE_URL');
-
-describe('BackendService', () => {
-  let service: BackendService;
-  // let provider: PactWeb;
-  let p2: PactWeb;
-
-  beforeAll((done) => {
-    // // const packWebConfig: PactWebOptions = {
-    // //   port: 1234,
-    // //   host: '127.0.0.1',
-    // // };
-    // // provider = new PactWeb(packWebConfig);
-    // provider = new PactWeb({
-    //   // consumer: 'bcfinal-theatermanagement-spa',
-    //   // provider: 'bcfinal-theatermanagement-bff',
-    //   host: '127.0.0.1',
-    //   port: 1234,
-    //   spec: 2
-    //  });
-    // // setTimeout(done, 10000);
-    // provider.removeInteractions();
-    // done();
-
-     // const packWebConfig: PactWebOptions = {
-    //   port: 1234,
-    //   host: '127.0.0.1',
-    // };
-    // provider = new PactWeb(packWebConfig);
-    p2 = new PactWeb({
-      // consumer: 'bcfinal-theatermanagement-spa',
-      // provider: 'bcfinal-theatermanagement-bff',
-      host: '127.0.0.1',
-      port: 1234,
-      spec: 2
-     });
-    // setTimeout(done, 10000);
-    p2.removeInteractions();
-    done();
- });
-
-  beforeEach((done) => {
-    TestBed.configureTestingModule({
-      imports: [HttpClientTestingModule],
-      providers: [
-        // { provide: 'BACKEND_BASE_URL', useValue: `${provider.mockService.baseUrl}/api`},
-        { provide: 'BACKEND_BASE_URL', useValue: 'http://127.0.0.1:1234/api' },
-        BackendService
-      ]
+describe('BackendService consumer-defined contracts', () => {
+  if (!environment.singleTestRun)
+  {
+    it('*** Skipping this test due to multiple test runners. ** This spec uses a global Pact server which cannot be shared by multiple test runners. To run this spec, do the singleRun thing.', () => {
+      expect(environment.singleTestRun).toBeFalse();
     });
-    service = TestBed.inject(BackendService);
-    done();
-  });
+  }
+  else
+  {
+    let service: BackendService;
+    let provider: PactWeb;
 
-  afterAll((done) => {
-    // provider.finalize().then(done, done.fail)
-    p2.finalize().then(done, done.fail)
-    // done();
-  });
+    beforeAll((done) => {
+      provider = new PactWeb({
+        // consumer: 'bcfinal-theatermanagement-spa',
+        // provider: 'bcfinal-theatermanagement-bff',
+        host: '127.0.0.1',
+        port: 1234,
+        spec: 2
+      });
+      // setTimeout(done, 10000);
+      provider.removeInteractions().then(done);
+    });
 
-  it('should be created (by backend.pact.spec))', (done) => {
-    expect(service).toBeTruthy();
-    done();
-  });
+    beforeEach((done) => {
+      TestBed.configureTestingModule({
+        imports: [HttpClientTestingModule],
+        providers: [
+          mockProvider(ConfigService, {
+            apiBaseUrl: 'http://127.0.0.1:1234/api'
+          }),
+          BackendService
+        ]
+      });
+      service = TestBed.inject(BackendService);
+      provider
+        .addInteraction(
+          {
+            state: "There are no movies",
+            uponReceiving: "a request to list the movies",
+            withRequest: {
+              method: "GET",
+              path: "/api/movies",
+            },
+            willRespondWith: {
+              status: 200,
+              headers: {
+                "Content-Type": "application/json",
+              },
+              body: [],
+            },
+          }
+        )
+        .then(done, done.fail)
+    });
 
-  it('should have correct baseUrl', (done) => {
-    expect(service.baseUrl).toBe('http://127.0.0.1:1234/api');
-    done();
-  });
+    // afterAll((done) => {
+    //   provider.finalize().then(done, done.fail)
+    // });
 
-  // describe("getMovies", function () {
-  //   beforeAll((done) => {
-  //     const emptyMovies: any[] = [];
-  //     provider
-  //       .addInteraction(
-  //         {
-  //           state: "I am friends with Fred",
-  //           uponReceiving: "a request friends",
-  //           withRequest: {
-  //             method: "GET",
-  //             path: "/api/movies",
-  //             headers: {
-  //               Accept: "application/json",
-  //             },
-  //           },
-  //           willRespondWith: {
-  //             status: 200,
-  //             headers: {
-  //               "Content-Type": "application/json",
-  //             },
-  //             body: {
-  //               emptyMovies
-  //             },
-  //           },
-  //         }
-  //       )
-  //       .then(done, done.fail)
-  //       // provider.mockService.writePact().then(done);
-  //   });
+    it('should be created (by backend.pact.spec))', (done) => {
+      expect(service).not.toBeTruthy();
+      done();
+    });
 
-  //   // it("always succeeds", (done) => {
-  //   //   done();
-  //   // });
+    it('should have correct baseUrl', (done) => {
+      expect(service.baseUrl).toBe('/api');
+      done();
+    });
 
-  //   it("has no movies", (done) => {
-  //     //Run the tests
-  //     console.log(`********${provider.mockService.baseUrl}******************************`);
-  //     // service.getMovies().subscribe(
-  //     //   movies => {
-  //     //     expect(movies).toEqual(
-  //     //       [
-  //     //       ]
-  //     //     );
-  //     //     console.log('success!');
-  //     //     done();
-  //     //   },
-  //     //   error => done.fail(error)
-  //     // );
-  //     done();
-  //     //provider.verify().then(done, done.fail)
-  //   });
+    // describe("when no movies", function () {
+    //   beforeAll((done) => {
+    //     provider
+    //       .addInteraction(
+    //         {
+    //           state: "There are no movies",
+    //           uponReceiving: "a request to list the movies",
+    //           withRequest: {
+    //             method: "GET",
+    //             path: "/api/movies",
+    //           },
+    //           willRespondWith: {
+    //             status: 200,
+    //             headers: {
+    //               "Content-Type": "application/json",
+    //             },
+    //             body: [],
+    //           },
+    //         }
+    //       )
+    //       .then(done, done.fail)
+    //   });
 
-  //   // it("has no movies", fakeAsync(() => {
-  //   //   // given
-  //   //   var movies: Movie[] = [];
+    //   it("always succeeds", () => {
+    //     console.log(`********${provider.mockService.baseUrl}******************************`);
+    //   });
 
-  //   //   // when
-  //   //   // service.getMovies().subscribe(
-  //   //   //   result => {
-  //   //   //     movies = result;
-  //   //   //   });
-
-  //   //   service.getMovies().subscribe(
-  //   //     result => {
-  //   //       movies = result;
-  //   //     });
-  //   //   // then
-  //   //   expect(movies).toEqual(
-  //   //     [
-  //   //     ]
-  //   //   );
-
-  //   //   // done();
-  //   //   provider.verify();
-  //   //   //provider.verify().then(done, done.fail)
-  //   // }));
-  // });
-
-  // describe("sayHello", () => {
-  //   beforeAll(function (done) {
-  //     provider.addInteraction({
-  //       state: 'Yo!',
-  //       uponReceiving: 'a request for say hello',
-  //       withRequest: {
-  //         method: 'GET',
-  //         path: '/hello-service/api',
-  //         query: 'name=Chris'
-  //       },
-  //       willRespondWith: {
-  //         status: 200,
-  //         headers: { "Content-Type": "application/json" },
-  //         body: 'Hello Chris!'
-  //       }
-  //     })
-  //     .then(function () { done() }, function (err) { done.fail(err) })
-  //   })
-
-  //   // it("should say hello", function(done) {
-  //   //   //Run the tests
-  //   //   service.sayHello('Chris')
-  //   //     .subscribe(res => {
-  //   //       expect(res).toEqual('Hello Chris!')
-  //   //       done()
-  //   //     },
-  //   //     err => {
-
-  //   //     done.fail(err)
-  //   //   })
-  //   // });
-
-  //   // // verify with Pact, and reset expectations
-  //   // it('successfully verifies', function(done) {
-  //   //   provider.verify()
-  //   //     .then(function(a) {
-  //   //       done()
-  //   //     }, function(e) {
-  //   //       done.fail(e)
-  //   //     })
-  //   // })
-  // })
+      // it("has no movies", (done) => {
+      //   console.log(`********${provider.mockService.baseUrl}******************************`);
+      //   service.getMovies().subscribe(
+      //     movies => {
+      //       expect(movies).toEqual([]);
+      //       console.log('success!');
+      //       done();
+      //     },
+      //     error => done.fail(error)
+      //   );
+      // });
+    // });
+  }
 });
 ~~~
 
+karma.conf.js
 ~~~
 // Karma configuration file, see link for more information
 // https://karma-runner.github.io/1.0/config/configuration-file.html
-var path = require("path")
 
 module.exports = function (config) {
   config.set({
     basePath: '',
-    frameworks: ['jasmine', '@angular-devkit/build-angular', 'pact'],
+    frameworks: ['jasmine', '@angular-devkit/build-angular'],
     plugins: [
       require('karma-jasmine'),
       require('karma-chrome-launcher'),
       require('karma-jasmine-html-reporter'),
       require('karma-coverage'),
-      require('@angular-devkit/build-angular/plugins/karma'),
-      require('@pact-foundation/karma-pact'),
+      require('@angular-devkit/build-angular/plugins/karma')
     ],
-
-    // Pact Providers
-    pact: [
-      {
-        port: 1234,
-        consumer: "KarmaJasmineConsumer",
-        provider: "KarmaJasmineProvider",
-        logLevel: "DEBUG",
-        // log: path.resolve(process.cwd(), "logs", "pact.log"),
-        dir: path.resolve(process.cwd(), "pacts"),
-      },
-    ],
-    proxies: {'/hello-service/api':'http://localhost:1234/hello-service/api'},
-    // proxies: {
-    //   '/api/': 'http://127.0.0.1:1234/api/'
-    // },
     client: {
       jasmine: {
         // you can add configuration options for Jasmine here
@@ -417,33 +326,126 @@ module.exports = function (config) {
 };
 ~~~
 
+karma.pact.conf.js
+~~~
+// Karma configuration file for generating Pact consumer-defined contracts.
+var path = require("path")
+process.env.CHROME_BIN = require("puppeteer").executablePath()
+
+module.exports = function(config) {
+  config.set({
+    // base path that will be used to resolve all patterns (eg. files, exclude)
+    basePath: ".",
+
+    // frameworks to use
+    // available frameworks: https://npmjs.org/browse/keyword/karma-adapter
+    // frameworks: ["jasmine", "pact"],
+    frameworks: ["jasmine"],
+
+    // list of files / patterns to load in the browser
+    // files: [
+    //   // Local development
+    //   // '../../dist-web/pact-web.js',
+    //   "../node_modules/@pact-foundation/pact-web/pact-web.js",
+    //   "src\app\core\singleton-services\backend\backend.service.js",
+    //   "src\app\pact\backend.pactspec.js",
+    // ],
+
+    // list of files to exclude
+    exclude: [],
+
+    // preprocess matching files before serving them to the browser
+    // available preprocessors: https://npmjs.org/browse/keyword/karma-preprocessor
+    preprocessors: {},
+
+    // test results reporter to use
+    // possible values: 'dots', 'progress'
+    // available reporters: https://npmjs.org/browse/keyword/karma-reporter
+    reporters: ["progress"],
+
+    // Pact Providers
+    pact: [
+      {
+        port: 1234,
+        consumer: "bcfinal-theatermanagement-spa",
+        provider: "bcfinal-theatermanagement-bff",
+        logLevel: "DEBUG",
+        log: path.resolve(process.cwd(), "logs", "pact.log"),
+        dir: path.resolve(process.cwd(), "pacts"),
+      },
+    ],
+
+    // plugins: ["karma-*", "@pact-foundation/karma-pact"],
+    plugins: ["karma-*"],
+
+    // web server port
+    port: 9877,
+
+    // enable / disable colors in the output (reporters and logs)
+    colors: true,
+
+    // level of logging
+    // possible values: config.LOG_DISABLE || config.LOG_ERROR || config.LOG_WARN || config.LOG_INFO || config.LOG_DEBUG
+    logLevel: config.LOG_INFO,
+
+    // enable / disable watching file and executing tests whenever any file changes
+    autoWatch: true,
+
+    // start these browsers
+    // available browser launchers: https://npmjs.org/browse/keyword/karma-launcher
+    browsers: ['ChromeHeadlessNoSandbox'],
+
+    // customLaunchers: {
+    //   Chrome_without_security: {
+    //     base: "ChromeHeadless",
+    //     flags: ["--disable-web-security", "--disable-site-isolation-trials"],
+    //   },
+    // },
+
+    customLaunchers: {
+      ChromeHeadlessNoSandbox: {
+        base: 'ChromeHeadless',
+        flags: ['--no-sandbox']
+      }
+    },
+
+    // Continuous Integration mode
+    // if true, Karma captures browsers, runs the tests and exits
+    singleRun: true,
+  })
+}
+~~~
+
 src\app\app.module.ts
 ~~~
 import { NgModule } from '@angular/core';
 import { BrowserModule } from '@angular/platform-browser';
 import { HttpClientModule } from '@angular/common/http';
 import { FormsModule } from '@angular/forms';
-import { environment } from 'src/environments/environment';
 
-// TODO: Alphabetize these
+import { AboutComponent } from './areas/about/pages/about/about.component';
 import { AppRoutingModule } from './app-routing.module';
 import { AppComponent } from './app.component';
 import { BackendService } from './core/singleton-services/backend/backend.service';
-import { MovieListComponent } from './areas/movies/pages/movie-list/movie-list.component';
 import { DashboardComponent } from './areas/dashboard/pages/dashboard/dashboard.component';
 import { HeaderComponent } from './areas/app/header/header.component';
+import { MovieListComponent } from './areas/movies/pages/movie-list/movie-list.component';
 import { PageNotFoundComponent } from './areas/404/pages/page-not-found/page-not-found.component';
-import { AboutComponent } from './areas/about/pages/about/about.component';
+import { ConfigService } from './core/singleton-services/config/config.service';
+import { APP_INITIALIZER } from '@angular/core';
+
+export const configFactory = (configService: ConfigService) => {
+  return () => configService.loadConfig();
+};
 
 @NgModule({
   declarations: [
-    // TODO: Alphabetize these
+    AboutComponent,
     AppComponent,
-    MovieListComponent,
     DashboardComponent,
     HeaderComponent,
+    MovieListComponent,
     PageNotFoundComponent,
-    AboutComponent
   ],
   imports: [
     BrowserModule,
@@ -453,8 +455,16 @@ import { AboutComponent } from './areas/about/pages/about/about.component';
   ],
   providers: [
     AppComponent,
+    {
+      // Loading ConfigService as part of APPINITIALIZER
+      // ensures the application isn't started before the
+      // config settings are loaded.
+      provide: APP_INITIALIZER,
+      useFactory: configFactory,
+      deps: [ConfigService],
+      multi: true
+    },
     BackendService,
-    { provide: 'BACKEND_BASE_URL', useFactory: () => environment.apiBaseUrl }
   ],
   exports: [
     HeaderComponent
@@ -462,4 +472,47 @@ import { AboutComponent } from './areas/about/pages/about/about.component';
   bootstrap: [AppComponent]
 })
 export class AppModule { }
+~~~
+
+environment.prod.ts
+~~~
+export const environment = {
+  envName: 'Production',
+  production: true,
+  singleTestRun: false,
+  apiBaseUrl: undefined
+};
+~~~
+
+environment.singletestrun.ts
+~~~
+export const environment = {
+  envName: 'Single Test Run',
+  production: false,
+  singleTestRun: true,
+  apiBaseUrl: undefined
+};
+~~~
+
+environment.ts
+~~~
+// This file can be replaced during build by using the `fileReplacements` array.
+// `ng build` replaces `environment.ts` with `environment.prod.ts`.
+// The list of file replacements can be found in `angular.json`.
+
+export const environment = {
+  envName: 'Default',
+  production: false,
+  singleTestRun: false,
+  apiBaseUrl: '/api'
+};
+
+/*
+ * For easier debugging in development mode, you can import the following file
+ * to ignore zone related error stack frames such as `zone.run`, `zoneDelegate.invokeTask`.
+ *
+ * This import should be commented out in production mode because it will have a negative impact
+ * on performance if an error is thrown.
+ */
+// import 'zone.js/plugins/zone-error';  // Included with Angular CLI.
 ~~~
