backend.pact.spec.ts

--- a/content/en/docs/Microservices Dev Bootcamp/010. Angular SPA/048. Pact.md
+++ b/content/en/docs/Microservices Dev Bootcamp/010. Angular SPA/048. Pact.md
@@ -7,9 +7,7 @@ description: >
   Pact.
 ---
 
-## TODO: Complete setup of Pact environment
-
-npx ng test --karma-config karma.pact.conf.js
+Create branch "feature/pact"
 
 ## Credits
 
@@ -41,112 +39,17 @@ What you'll install:
  - Some declaration files (@types/express and @types/needle) needed by the above packages.
 
 ~~~
-npm uninstall -D @pact-foundation/pact-node @pact-foundation/karma-pact
-npm uninstall -D @pact-foundation/pact-web @types/express @types/needle
-npm uninstall @pact-foundation/pact-node @pact-foundation/karma-pact
-npm uninstall @pact-foundation/pact-web @types/express @types/needle
-
-
 npm install -D @pact-foundation/pact-node @pact-foundation/karma-pact puppeteer
 npm install @pact-foundation/pact-web @types/express @types/needle
 ~~~
+
+TODO: Determine if the above really needs puppeteer
 
 Commit with the comment "npm install -D @pact...".
 
 ## Create a .spec
 
-We're going to create a test specification in the file
-`src\app\pact\backend.pact.spec.ts` which will test
-the `BackendService` (from `../core/singleton-services/backend/backend.service`)
-and which will create the Pact file for the `frontend-backend` contract.
-
-We're going to create the test specification in a few steps:
- 1. Generate a temporary service and its `.spec.ts` file.
- 2. Since the service we're actually testing requires `HttpClient` in its constructor, we'll
-    add `HttpClient` to the constructor of the temporary service and adjust the `.spec.ts` accordingly.
- 3. Change the `.spec.ts` file so it references `BackendService` instead of the temporary service.
- 4. Delete the temporary service.
- 5. Add 
-~~~
-npx ng g service pact/temporary
-~~~
-
-This will create two files:
-
-~~~
-src\app\pact\temporary.service.spec.ts
-src\app\pact\temporary.service.ts
-~~~
-
-Commit with the comment "ng g service pact/temporary".
-
-Add `HttpClient` to the constructor of `TemporaryService`:
-
-~~~
-import { HttpClient } from '@angular/common/http';
-import { Injectable } from '@angular/core';
-
-@Injectable({
-  providedIn: 'root'
-})
-export class TemporaryService {
-
-  constructor(
-    private httpClient: HttpClient) {
-  }
-}
-~~~
-
-Check out the Karma window. You'll see a failed test that says something like this:
-
-~~~
-NullInjectorError: R3InjectorError(DynamicTestModule)[TemporaryService -> HttpClient -> HttpClient]: 
-  NullInjectorError: No provider for HttpClient!
-~~~
-
-To allow that test to pass, change `src\app\pact\temporary.service.spec.ts` from...
-
-~~~
-...
-    TestBed.configureTestingModule({});
-
-...
-~~~
-
-...to...
-
-~~~
-...
-    TestBed.configureTestingModule({
-      imports: [HttpClientTestingModule]
-    });
-...
-~~~
-
-...and add the import.
-
-Commit with the comment "Added HttpClient to the ctor of TemporaryService".
-
-Delete `src\app\pact\temporary.service.ts`
-
-In `src\app\pact\temporary.service.spec.ts`
-
- - Change all "TemporaryService" to "BackendService"
- - Import "BackendService"
- - Delete the import of "TemporaryService"
-
-Delete `src\app\pact\backend-contract.service.ts`.
-
-Commit with the comment "temporary.service.spec.ts now tests BackendService.".
-
-Rename `temporary.service.spec.ts` to `backend.pact.spec.ts`.
-
-Commit with the comment "Renamed spec to backend.pact.spec.ts.".
-
-## WIP
-
 src\app\pact\backend.pact.spec.ts
-
 ~~~
 import { environment } from 'src/environments/environment';
 
@@ -278,241 +181,16 @@ describe('BackendService consumer-defined contracts', () => {
 });
 ~~~
 
-karma.conf.js
-~~~
-// Karma configuration file, see link for more information
-// https://karma-runner.github.io/1.0/config/configuration-file.html
+Run the tests in **singletestrun** mode to make sure they pass.
 
-module.exports = function (config) {
-  config.set({
-    basePath: '',
-    frameworks: ['jasmine', '@angular-devkit/build-angular'],
-    plugins: [
-      require('karma-jasmine'),
-      require('karma-chrome-launcher'),
-      require('karma-jasmine-html-reporter'),
-      require('karma-coverage'),
-      require('@angular-devkit/build-angular/plugins/karma')
-    ],
-    client: {
-      jasmine: {
-        // you can add configuration options for Jasmine here
-        // the possible options are listed at https://jasmine.github.io/api/edge/Configuration.html
-        // for example, you can disable the random execution with `random: false`
-        // or set a specific seed with `seed: 4321`
-      },
-      clearContext: false // leave Jasmine Spec Runner output visible in browser
-    },
-    jasmineHtmlReporter: {
-      suppressAll: true // removes the duplicated traces
-    },
-    coverageReporter: {
-      dir: require('path').join(__dirname, './coverage/project'),
-      subdir: '.',
-      reporters: [
-        { type: 'html' },
-        { type: 'text-summary' }
-      ]
-    },
-    reporters: ['progress', 'kjhtml'],
-    port: 9876,
-    colors: true,
-    logLevel: config.LOG_INFO,
-    autoWatch: true,
-    browsers: ['Chrome'],
-    singleRun: false,
-    restartOnFileChange: true
-  });
-};
+~~~
+npm run singletestrun
 ~~~
 
-karma.pact.conf.js
+Run the tests in the usual mode to make sure they pass.
+
 ~~~
-// Karma configuration file for generating Pact consumer-defined contracts.
-var path = require("path")
-process.env.CHROME_BIN = require("puppeteer").executablePath()
-
-module.exports = function(config) {
-  config.set({
-    // base path that will be used to resolve all patterns (eg. files, exclude)
-    basePath: ".",
-
-    // frameworks to use
-    // available frameworks: https://npmjs.org/browse/keyword/karma-adapter
-    // frameworks: ["jasmine", "pact"],
-    frameworks: ["jasmine"],
-
-    // list of files / patterns to load in the browser
-    // files: [
-    //   // Local development
-    //   // '../../dist-web/pact-web.js',
-    //   "../node_modules/@pact-foundation/pact-web/pact-web.js",
-    //   "src\app\core\singleton-services\backend\backend.service.js",
-    //   "src\app\pact\backend.pactspec.js",
-    // ],
-
-    // list of files to exclude
-    exclude: [],
-
-    // preprocess matching files before serving them to the browser
-    // available preprocessors: https://npmjs.org/browse/keyword/karma-preprocessor
-    preprocessors: {},
-
-    // test results reporter to use
-    // possible values: 'dots', 'progress'
-    // available reporters: https://npmjs.org/browse/keyword/karma-reporter
-    reporters: ["progress"],
-
-    // Pact Providers
-    pact: [
-      {
-        port: 1234,
-        consumer: "bcfinal-theatermanagement-spa",
-        provider: "bcfinal-theatermanagement-bff",
-        logLevel: "DEBUG",
-        log: path.resolve(process.cwd(), "logs", "pact.log"),
-        dir: path.resolve(process.cwd(), "pacts"),
-      },
-    ],
-
-    // plugins: ["karma-*", "@pact-foundation/karma-pact"],
-    plugins: ["karma-*"],
-
-    // web server port
-    port: 9877,
-
-    // enable / disable colors in the output (reporters and logs)
-    colors: true,
-
-    // level of logging
-    // possible values: config.LOG_DISABLE || config.LOG_ERROR || config.LOG_WARN || config.LOG_INFO || config.LOG_DEBUG
-    logLevel: config.LOG_INFO,
-
-    // enable / disable watching file and executing tests whenever any file changes
-    autoWatch: true,
-
-    // start these browsers
-    // available browser launchers: https://npmjs.org/browse/keyword/karma-launcher
-    browsers: ['ChromeHeadlessNoSandbox'],
-
-    // customLaunchers: {
-    //   Chrome_without_security: {
-    //     base: "ChromeHeadless",
-    //     flags: ["--disable-web-security", "--disable-site-isolation-trials"],
-    //   },
-    // },
-
-    customLaunchers: {
-      ChromeHeadlessNoSandbox: {
-        base: 'ChromeHeadless',
-        flags: ['--no-sandbox']
-      }
-    },
-
-    // Continuous Integration mode
-    // if true, Karma captures browsers, runs the tests and exits
-    singleRun: true,
-  })
-}
+npm test
 ~~~
 
-src\app\app.module.ts
-~~~
-import { NgModule } from '@angular/core';
-import { BrowserModule } from '@angular/platform-browser';
-import { HttpClientModule } from '@angular/common/http';
-import { FormsModule } from '@angular/forms';
-
-import { AboutComponent } from './areas/about/pages/about/about.component';
-import { AppRoutingModule } from './app-routing.module';
-import { AppComponent } from './app.component';
-import { BackendService } from './core/singleton-services/backend/backend.service';
-import { DashboardComponent } from './areas/dashboard/pages/dashboard/dashboard.component';
-import { HeaderComponent } from './areas/app/header/header.component';
-import { MovieListComponent } from './areas/movies/pages/movie-list/movie-list.component';
-import { PageNotFoundComponent } from './areas/404/pages/page-not-found/page-not-found.component';
-import { ConfigService } from './core/singleton-services/config/config.service';
-import { APP_INITIALIZER } from '@angular/core';
-
-export const configFactory = (configService: ConfigService) => {
-  return () => configService.loadConfig();
-};
-
-@NgModule({
-  declarations: [
-    AboutComponent,
-    AppComponent,
-    DashboardComponent,
-    HeaderComponent,
-    MovieListComponent,
-    PageNotFoundComponent,
-  ],
-  imports: [
-    BrowserModule,
-    AppRoutingModule,
-    FormsModule,
-    HttpClientModule
-  ],
-  providers: [
-    AppComponent,
-    {
-      // Loading ConfigService as part of APPINITIALIZER
-      // ensures the application isn't started before the
-      // config settings are loaded.
-      provide: APP_INITIALIZER,
-      useFactory: configFactory,
-      deps: [ConfigService],
-      multi: true
-    },
-    BackendService,
-  ],
-  exports: [
-    HeaderComponent
-  ],
-  bootstrap: [AppComponent]
-})
-export class AppModule { }
-~~~
-
-environment.prod.ts
-~~~
-export const environment = {
-  envName: 'Production',
-  production: true,
-  singleTestRun: false,
-  apiBaseUrl: undefined
-};
-~~~
-
-environment.singletestrun.ts
-~~~
-export const environment = {
-  envName: 'Single Test Run',
-  production: false,
-  singleTestRun: true,
-  apiBaseUrl: undefined
-};
-~~~
-
-environment.ts
-~~~
-// This file can be replaced during build by using the `fileReplacements` array.
-// `ng build` replaces `environment.ts` with `environment.prod.ts`.
-// The list of file replacements can be found in `angular.json`.
-
-export const environment = {
-  envName: 'Default',
-  production: false,
-  singleTestRun: false,
-  apiBaseUrl: '/api'
-};
-
-/*
- * For easier debugging in development mode, you can import the following file
- * to ignore zone related error stack frames such as `zone.run`, `zoneDelegate.invokeTask`.
- *
- * This import should be commented out in production mode because it will have a negative impact
- * on performance if an error is thrown.
- */
-// import 'zone.js/plugins/zone-error';  // Included with Angular CLI.
-~~~
+Commit with comment "backend.pact.spec.ts"
