--- a/content/en/docs/Microservices Dev Bootcamp/010. Angular SPA/022. Add singletestrun Environment.md
+++ b/content/en/docs/Microservices Dev Bootcamp/010. Angular SPA/022. Add singletestrun Environment.md
@@ -33,6 +33,10 @@ karma.singletestrun.conf.js
 // Karma configuration file, see link for more information
 // https://karma-runner.github.io/1.0/config/configuration-file.html
 
+// Look for the word NOTE to describe the differences between this file and karma.conf.js
+
+var path = require("path")     // NOTE this was added
+
 module.exports = function (config) {
   config.set({
     basePath: '',
@@ -47,13 +51,22 @@ module.exports = function (config) {
     reporters: ['progress', 'kjhtml'],
     port: 9876,
     colors: true,
-    logLevel: config.LOG_INFO,
-    autoWatch: false,
-    browsers: ['ChromeHeadless'],
-    singleRun: true,
-    concurrency: Infinity
+    logLevel: config.LOG_ERROR,      // NOTE this was LOG_INFO
+    autoWatch: false,                // NOTE this was true
+    browsers: ['ChromeHeadlessCI'],  // NOTE this was ['Chrome']
+    customLaunchers: {               // NOTE this section was added
+      ChromeHeadlessCI: {
+        base: 'ChromeHeadless',
+        flags: ['--no-sandbox']
+      }
+    },
+    singleRun: true,                 // NOTE this was false
+    restartOnFileChange: false,      // NOTE this was true
+    browserNoActivityTimeout: 40000, // NOTE this wasn't specified
+    concurrency: 1                   // NOTE this wasn't specified
   });
 };
+
 ~~~
 
 ### Add a test configuration to angular.json
