--- a/content/en/docs/Microservices Dev Bootcamp/010. Angular SPA/048. Pact.md
+++ b/content/en/docs/Microservices Dev Bootcamp/010. Angular SPA/048. Pact.md
@@ -47,38 +47,86 @@ TODO: Determine if the above really needs puppeteer
 
 Commit with the comment "npm install -D @pact...".
 
+## Modify karma.singletestrun.conf.js to launch Pact provider
+
+TODO: Explain why this is necessary.
+
+karma.singletestrun.conf.js
+~~~
+// Karma configuration file, see link for more information
+// https://karma-runner.github.io/1.0/config/configuration-file.html
+
+// Look for the word NOTE to describe the differences between this file and karma.conf.js
+
+var path = require("path")
+
+module.exports = function (config) {
+  config.set({
+    basePath: '',
+    frameworks: ['jasmine', '@angular-devkit/build-angular', 'pact'], // NOTE the addition of 'pact'
+    plugins: [
+      require('karma-jasmine'),
+      require('karma-chrome-launcher'),
+      require('karma-jasmine-html-reporter'),
+      require('karma-coverage'),
+      require('@angular-devkit/build-angular/plugins/karma'),
+      require('@pact-foundation/karma-pact') // NOTE this line was added
+    ],
+    files: [                                 // NOTE this section was added
+      'node_modules/@pact-foundation/pact-web/pact-web.js',
+    ],
+    reporters: ['progress', 'kjhtml'],
+    port: 9876,
+    colors: true,
+    logLevel: config.LOG_ERROR,      // NOTE this was LOG_INFO
+    autoWatch: false,                // NOTE this was true
+    browsers: ['ChromeHeadlessCI'],  // NOTE this was ['Chrome']
+    customLaunchers: {               // NOTE this section was added
+      ChromeHeadlessCI: {
+        base: 'ChromeHeadless',
+        flags: ['--no-sandbox']
+      }
+    },
+    singleRun: true,                 // NOTE this was false
+    restartOnFileChange: false,      // NOTE this was true
+    browserNoActivityTimeout: 40000, // NOTE this wasn't specified
+    concurrency: 1,                  // NOTE this wasn't specified
+    pact: [{                         // NOTE this section was added
+      cors: true,
+      port: 1234,
+      consumer: 'bcfinal-theatermanagement-spa',
+      provider: 'bcfinal-theatermanagement-bff',
+      logLevel: 'DEBUG',
+      log: path.resolve(process.cwd(), 'logs', 'pact.log'),
+      dir: 'pacts'
+    }]
+  });
+};
+~~~
+
 ## Create a .spec
 
 src\app\pact\backend.pact.spec.ts
 ~~~
-import { environment } from 'src/environments/environment';
-
-// Current state: This isn't going to work when multiple browser windows are
-// running in parallel. Will need to rethink. Probably will have to run this
-// as a one-off test.
-
-import { InjectionToken } from '@angular/core';
-import { HttpClient } from '@angular/common/http';
-import { Movie } from '../core/singleton-services/backend/movie';
 import { PactWeb } from '@pact-foundation/pact-web';
-import { Observable } from 'rxjs';
-import { HttpClientTestingModule } from '@angular/common/http/testing';
-import { fakeAsync, TestBed } from '@angular/core/testing';
-import { BackendService } from '../core/singleton-services/backend/backend.service';
-import { ConfigService } from '../core/singleton-services/config/config.service';
+import { HttpClientModule } from '@angular/common/http';
+import { TestBed } from '@angular/core/testing';
 import { mockProvider } from '@ngneat/spectator';
 
+import { BackendService } from '../core/singleton-services/backend/backend.service';
+import { ConfigService } from '../core/singleton-services/config/config.service';
+import { environment } from 'src/environments/environment';
+
 describe('BackendService consumer-defined contracts', () => {
-  if (!environment.singleTestRun)
-  {
-    it('*** Skipping this test due to multiple test runners. ** This spec uses a global Pact server which cannot be shared by multiple test runners. To run this spec, do the singleRun thing.', () => {
+  if (!environment.singleTestRun) {
+    it('*** Skipping this test due to multiple test runners. *** This spec uses a global Pact server which cannot be shared by multiple test runners. To run this spec: npm run singletestrun', () => {
       expect(environment.singleTestRun).toBeFalse();
     });
   }
-  else
-  {
+  else {
     let service: BackendService;
     let provider: PactWeb;
+    let originalTimeout: number;
 
     beforeAll((done) => {
       provider = new PactWeb({
@@ -88,16 +136,20 @@ describe('BackendService consumer-defined contracts', () => {
         port: 1234,
         spec: 2
       });
-      // setTimeout(done, 10000);
+
+      // Required if run with `singleRun: false`
       provider.removeInteractions().then(done);
+
+      originalTimeout = jasmine.DEFAULT_TIMEOUT_INTERVAL;
+      jasmine.DEFAULT_TIMEOUT_INTERVAL = 1000000;
     });
 
     beforeEach((done) => {
       TestBed.configureTestingModule({
-        imports: [HttpClientTestingModule],
+        imports: [HttpClientModule],
         providers: [
           mockProvider(ConfigService, {
-            apiBaseUrl: 'http://127.0.0.1:1234/api'
+            apiBaseUrl: 'http://localhost:1234/api'
           }),
           BackendService
         ]
@@ -117,66 +169,63 @@ describe('BackendService consumer-defined contracts', () => {
               headers: {
                 "Content-Type": "application/json",
               },
-              body: [],
+              body: '[]',
             },
           }
         )
-        .then(done, done.fail)
+        .then(() =>
+          {
+            console.log('Interaction added');
+            done();
+          }
+          , done.fail)
     });
 
-    // afterAll((done) => {
-    //   provider.finalize().then(done, done.fail)
+    afterAll((done) => {
+      jasmine.DEFAULT_TIMEOUT_INTERVAL = originalTimeout;
+      provider.finalize().then(done, done.fail)
+    });
+
+    // it('should be created (by backend.pact.spec))', (done) => {
+    //   expect(service).toBeTruthy();
+    //   done();
     // });
 
-    it('should be created (by backend.pact.spec))', (done) => {
-      expect(service).not.toBeTruthy();
-      done();
-    });
-
-    it('should have correct baseUrl', (done) => {
-      expect(service.baseUrl).toBe('/api');
-      done();
-    });
-
-    // describe("when no movies", function () {
-    //   beforeAll((done) => {
-    //     provider
-    //       .addInteraction(
-    //         {
-    //           state: "There are no movies",
-    //           uponReceiving: "a request to list the movies",
-    //           withRequest: {
-    //             method: "GET",
-    //             path: "/api/movies",
-    //           },
-    //           willRespondWith: {
-    //             status: 200,
-    //             headers: {
-    //               "Content-Type": "application/json",
-    //             },
-    //             body: [],
-    //           },
-    //         }
-    //       )
-    //       .then(done, done.fail)
-    //   });
-
-    //   it("always succeeds", () => {
-    //     console.log(`********${provider.mockService.baseUrl}******************************`);
-    //   });
-
-      // it("has no movies", (done) => {
-      //   console.log(`********${provider.mockService.baseUrl}******************************`);
-      //   service.getMovies().subscribe(
-      //     movies => {
-      //       expect(movies).toEqual([]);
-      //       console.log('success!');
-      //       done();
-      //     },
-      //     error => done.fail(error)
-      //   );
-      // });
+    // it('should have correct apiBaseUrl', (done) => {
+    //   expect(service.apiBaseUrl).toBe('http://localhost:1234/api');
+    //   done();
     // });
+
+    it("has no movies", (done) => {
+      console.log('------------- preparing');
+
+      service.getMovies().subscribe(
+        movies => {
+          expect(movies).toEqual([]);
+          console.log('^^^^^^^^^^^^^ success!');
+          provider.finalize();
+          done();
+        }, error => {
+          console.log('vvvvvvvvvvvvv failure!');
+          done.fail(error);
+        }
+      );
+
+      // service.getMoviesAsJson().subscribe(
+      //   json => {
+      //     expect(json).not.toBeEmpty();
+      //     //expect(json.replace(/\s/g, "")).toEqual('[]');
+      //     console.log('^^^^^^^^^^^^^ success! json is ' + json);
+      //     provider.finalize();
+      //     done();
+      //   }, error => {
+      //     console.log('vvvvvvvvvvvvv failure!');
+      //     done.fail(error);
+      //   }
+      // );
+
+      console.log('------------- waiting');
+    });
   }
 });
 ~~~
