Sequential tests in multiple browsers

--- a/content/en/docs/Microservices Dev Bootcamp/010. Angular SPA/048. Pact.md
+++ b/content/en/docs/Microservices Dev Bootcamp/010. Angular SPA/048. Pact.md
@@ -58,7 +58,7 @@ karma.singletestrun.conf.js
 
 // Look for the word NOTE to describe the differences between this file and karma.conf.js
 
-var path = require("path")
+var path = require("path")     // NOTE this was added
 
 module.exports = function (config) {
   config.set({
@@ -78,6 +78,7 @@ module.exports = function (config) {
     reporters: ['progress', 'kjhtml'],
     port: 9876,
     colors: true,
+    concurrency: 1,                  // Run each browser's tests sequentially.
     logLevel: config.LOG_ERROR,      // NOTE this was LOG_INFO
     autoWatch: false,                // NOTE this was true
     browsers: ['ChromeHeadlessCI'],  // NOTE this was ['Chrome']
@@ -90,7 +91,6 @@ module.exports = function (config) {
     singleRun: true,                 // NOTE this was false
     restartOnFileChange: false,      // NOTE this was true
     browserNoActivityTimeout: 40000, // NOTE this wasn't specified
-    concurrency: 1,                  // NOTE this wasn't specified
     pact: [{                         // NOTE this section was added
       cors: true,
       port: 1234,
