--- a/content/en/docs/Microservices Dev Bootcamp/010. Angular SPA/025. Obtain the backend URL.md
+++ b/content/en/docs/Microservices Dev Bootcamp/010. Angular SPA/025. Obtain the backend URL.md
@@ -19,7 +19,7 @@ We're going to create a service, `ConfigService`, which:
 
 The file `assets/config.json` will be kept under source control 
 and will initially contain no properties, which means that
-when debugging all properties will be read from `src\environments\environment.ts`.
+when debugging all properties will be read from `src/environments/environment.ts`.
 
 The pipeline will entirely replace the default `config.json` file when the app is staged or deployed.
 
@@ -60,10 +60,13 @@ npx ng generate class core/singleton-services/config/config --skip-tests=true
 At this point we'd inspect the changes made to:
 
 ~~~
-src\app\core\singleton-services\config\config.service.spec.ts
-src\app\core\singleton-services\config\config.service.ts
-src\app\core\singleton-services\config\config.ts
+src/FakeMovieCatalogSvc/Properties/launchSettings.json
+src/FakeMovieCatalogSvc/Dockerfile
+src/FakeMovieCatalogSvc/FakeMovieCatalogSvc.csproj
+docker-compose.yml
+docker-compose.override.yml
 ~~~
+
 
 Commit with comment "ng g class & service config config"
 
@@ -84,7 +87,7 @@ Edit `config.service.ts`:
     1. From the Angular environment file ().
     2. (If present, overriding the above:) From the config.json file.
 
-  The AppModule (see src\app\app.module.ts) loads this service as part
+  The AppModule (see src/app/app.module.ts) loads this service as part
   of APPINITIALIZER, ensuring the application isn't started before the
   config settings are loaded.
 
@@ -149,7 +152,7 @@ Add an `HttpClientTestingModule` to the `imports` in `config.service.spec.ts` li
 
 Now your tests should be happy again.
 
-Update `src\app\app.module.ts`:
+Update `src/app/app.module.ts`:
 
 ~~~
 ...
