Broked "Fake the backend" into 2 pages.

--- a/content/en/docs/Microservices Dev Bootcamp/010. Angular SPA/030. Fake the backend.md
+++ b/content/en/docs/Microservices Dev Bootcamp/010. Angular SPA/030. Fake the backend.md
@@ -7,53 +7,19 @@ description: >
   Fake it 'til you make it (then keep fakin' it).
 ---
 
-### Create feature branch
+## Still on the feature branch
 
-feature/fake-the-backend
+feature/dynamic-content
 
-### Update index.html
+## Update index.html
 
+Change the line in `index.html` from ...
 ~~~
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes">
-    <title>Let's Hear from the Backend</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
-</head>
-
-<body>
-    <main>
-        <h1>Movies</h1>
-        <table id="movies" border='1'>
-            <thead>
-                <tr>
-                    <th>id</th>
-                    <th>title</th>
-                </tr>
-            </thead>
-            <tbody></tbody>
-        </table>
-    </main>
-
-    <script>
-        (async function () {
+            const movies = await (await fetch('https://bootcampsharedbff.azurewebsites.net/movies')).json();
+~~~
+...to...
+~~~
             const movies = await (await fetch('/api/movies')).json();
-
-            var trHTML = '';
-
-            movies.forEach(movie => {
-                trHTML += '<tr><td>' + movie.id + '</td><td>' + movie.title + '</td></tr>';
-            });
-
-            $('#movies').append(trHTML);
-        }())
-    </script>
-</body>
-
-</html>
 ~~~
 
 ### TODO: Better title here
@@ -76,9 +42,7 @@ When prompted, enter the following values:
 {{% alert title="What, no love for C#?" color="primary" %}}
 How come we're using JavaScript instead of, say, C#?
 
-We'll get back to that later in bootcamp when we show how
-your fake backend can leverage Express.js packages like
-[json-server](https://github.com/typicode/json-server).
+We'll get back to that later in bootcamp.
 {{% /alert %}}
 
 ### /api/movies/index.js
