Corrected an improper instruction re: npm install

--- a/content/en/docs/Microservices Dev Bootcamp/010. Angular SPA/020. Explore the project.md
+++ b/content/en/docs/Microservices Dev Bootcamp/010. Angular SPA/020. Explore the project.md
@@ -38,8 +38,8 @@ Our `package.json` is a very basic version, so far.
 Before you do anything else, do:
 
 ~~~
-npm update
-npm update -D
+npm install
+npm install -D
 ~~~
 
 Now try out some of the scripts in `package.json`, such as:
