--- a/content/en/docs/Microservices Dev Bootcamp/010. Angular SPA/041. Terminals Manager.md
+++ b/content/en/docs/Microservices Dev Bootcamp/010. Angular SPA/041. Terminals Manager.md
@@ -28,7 +28,7 @@ extension for VS Code.
 
 Follow the instructions at the
 [Terminals Manager](https://marketplace.visualstudio.com/items?itemName=fabiospampinato.vscode-terminals)
-site (which are basically, "Hit F1 and choose `Terminals: Edit Configuration`)
+site (which are basically, "Hit F1 and choose `Terminals: Edit Configuration`")
 to configure **Terminal Manager**.
 
 Use the following configuration for the commands you'll be using most in bootcamp:
