--- a/content/en/docs/Microservices Dev Bootcamp/010. Angular SPA/045. Obtain the backend URL.md
+++ b/content/en/docs/Microservices Dev Bootcamp/010. Angular SPA/045. Obtain the backend URL.md
@@ -2,14 +2,14 @@
 type: docs
 title: "Obtain the backend URL"
 linkTitle: "Obtain the backend URL"
-weight: 25
+weight: 45
 description: >
   Who you gonna call?
 ---
 
 This stuff came from https://www.thisdot.co/blog/runtime-environment-configuration-with-angular
 
-### Overview
+## Overview
 
 We're going to create a service, `ConfigService`, which:
 - Uses an `HttpClient`.
@@ -23,21 +23,25 @@ when debugging all properties will be read from `src/environments/environment.ts
 
 The pipeline will entirely replace the default `config.json` file when the app is staged or deployed.
 
-### Create feature branch
+## Create feature branch
 
 feature/obtain-backend-url
 
-### Install Spectator
+## Install Spectator
 
-TODO: Explain why we like Spectator https://github.com/ngneat/spectator
+Why **Spectator**? From their 
+[README.md](https://github.com/ngneat/spectator):
 
+> Spectator helps you get rid of all the boilerplate grunt work, leaving you with readable, sleek and streamlined unit tests.
+
+Install **Spectator**:
 ~~~
 npm install @ngneat/spectator --save-dev
 ~~~
 
 Commit with comment "npm install @ngneat/spectator --save-dev"
 
-### assets/config.json
+## assets/config.json
 
 Create `assets/config.json`.
 ~~~
@@ -47,28 +51,31 @@ Create `assets/config.json`.
 
 Commit with comment "assets/config.json"
 
-### ConfigService and Config class
+## ConfigService and Config class
 
 Generate some code. Note that our `Config` class is a just a DTO and doesn't need
 automated tests, so we use the `--skip-tests=true` option.
 
 ~~~
-npx ng generate service core/singleton-services/config/config
 npx ng generate class core/singleton-services/config/config --skip-tests=true
+npx ng generate service core/singleton-services/config/config
 ~~~
 
-At this point we'd inspect the changes made to:
+Inspect the changes made to:
 
 ~~~
-src/FakeMovieCatalogSvc/Properties/launchSettings.json
-src/FakeMovieCatalogSvc/Dockerfile
-src/FakeMovieCatalogSvc/FakeMovieCatalogSvc.csproj
-docker-compose.yml
-docker-compose.override.yml
+src\app\core\singleton-services\config\config.service.ts
+src\app\core\singleton-services\config\config.ts
+src\app\core\singleton-services\config\config.service.spec.ts
 ~~~
-
 
 Commit with comment "ng g class & service config config"
+
+## Write tests first
+
+TODO: Add the test stuff.
+
+## Implement
 
 Edit `config.ts`:
 ~~~
@@ -87,7 +94,7 @@ Edit `config.service.ts`:
     1. From the Angular environment file ().
     2. (If present, overriding the above:) From the config.json file.
 
-  The AppModule (see src/app/app.module.ts) loads this service as part
+  The AppModule (see src\app\app.module.ts) loads this service as part
   of APPINITIALIZER, ensuring the application isn't started before the
   config settings are loaded.
 
@@ -176,9 +183,8 @@ providers: [
 ...
 ~~~
 
+## Deploy
+
 Commit with comment "ConfigService"
 
-### TODO: Finish this up.
-
-Need to add a unit test.
-
+Push, create a pull request, complete the pull request and delete the branches.
