--- a/content/en/docs/Microservices Dev Bootcamp/010. Angular SPA/046. List the movies.md
+++ b/content/en/docs/Microservices Dev Bootcamp/010. Angular SPA/046. List the movies.md
@@ -4,7 +4,7 @@ title: "Quick list the movies"
 linkTitle: "Quick list the movies"
 weight: 46
 description: >
-  This is temporary. I'm adding a quick list of movies so Vista can work on the pipeline.
+  This is temporary. This needs to be broken up into more steps.
 ---
 
 ## TODO: Find a place for this
@@ -404,4 +404,8 @@ src\app\core\singleton-services\backend\*
 src\environments\*
 ~~~
 
+## Deploy
+
 Commit with comment "Angular app displays cached movie list"
+
+Push, create a pull request, complete the pull request and delete the branches.
