--- a/content/en/docs/Microservices Dev Bootcamp/010. Angular SPA/045. Auto launch the Pact server.md
+++ b/content/en/docs/Microservices Dev Bootcamp/010. Angular SPA/045. Auto launch the Pact server.md
@@ -1,27 +1,125 @@
 ---
 type: docs
-title: "Sequential tests in multiple browsers"
-linkTitle: "Sequential tests in multiple browsers"
-weight: 045
+title: "Auto launch the Pact server"
+linkTitle: "Auto launch the Pact server"
+weight: 45
 description: >
-  Because of some (Pact) stuff we'll add later, we want to make sure that,
-  even if Karma tests are running in multiple browsers, only one browser at
-  a time is running tests.
+  Tell Karma to automatically start up and shut down the local Pact server we'll use for contract testing.
 ---
 
-Create a branch "feature/sequential-tests-in-multiple-browsers"
+## Credits
 
-## Modify karma.conf.js
+This approach came from:
+ - [Creating a Consumer-Driven Contract with Angular and Pact](https://reflectoring.io/consumer-driven-contracts-with-angular-and-pact/)
+ - [Using Pact with Karma](https://github.com/pact-foundation/pact-js#using-pact-with-karma)
+ - [pact-js/examples/karma/jasmine/](https://github.com/pact-foundation/pact-js/tree/master/examples/karma/jasmine)
+ - [ koelec / angular-pact-example](https://github.com/koelec/angular-pact-example)
 
-Add a `concurrency: 1` setting to `karma.conf.js`
+## Create a branch
+
+Create a branch "feature/auto-launch-pact-server"
+
+## Add /logs to .gitignore
+
+The Pact tools will be creating logs in the `\logs\` directory and
+those don't need to be shared with the whole team, 
+so add these lines to `.gitignore`:
+
 ~~~
-...
+# Logs
+/logs
+~~~
+
+Commit with the comment "Added /logs to .gitignore".
+
+## Install Pact packages
+
+What you'll install:
+ - [pact-node](https://github.com/pact-foundation/pact-node) is a wrapper around the original Ruby implementation of Pact that, among other things, allows to run a mock provider and create contract files - or “pacts”, as they are called when using Pact - from Javascript code.
+ - [karma-pact](https://github.com/pact-foundation/karma-pact) is a plugin for the Karma test runner framework that launches a mock provider via pact-node before running the actual tests.
+ - [pact-web](https://github.com/pact-foundation/pact-js) (also called PactJS) is a Javascript library that provides an API to define contract fragments by listing request / response pairs (“interactions”) and sending them to a pact-node mock server. This enables us to implement consumer-driven contract tests from our Angular tests.
+ - Some declaration files (@types/express and @types/needle) needed by the above packages.
+
+~~~
+npm install -D @pact-foundation/pact-node @pact-foundation/karma-pact puppeteer
+npm install @pact-foundation/pact-web @types/express @types/needle
+~~~
+
+TODO: Determine if the above really needs puppeteer
+
+Commit with the comment "npm install -D @pact...".
+
+## Modify karma.conf.js to launch Pact provider
+
+TODO: Explain why this is necessary.
+
+karma.conf.js
+~~~
+// Karma configuration file, see link for more information
+// https://karma-runner.github.io/1.0/config/configuration-file.html
+
+var path = require("path")
+
+module.exports = function (config) {
+  config.set({
+    basePath: '',
+    frameworks: ['jasmine', '@angular-devkit/build-angular', 'pact'], // NOTE the addition of 'pact'
+    plugins: [
+      require('karma-jasmine'),
+      require('karma-chrome-launcher'),
+      require('karma-jasmine-html-reporter'),
+      require('karma-coverage'),
+      require('@angular-devkit/build-angular/plugins/karma'),
+      require('@pact-foundation/karma-pact')
+    ],
+    files: [
+      'node_modules/@pact-foundation/pact-web/pact-web.js',
+    ],
+    client: {
+      jasmine: {
+        // you can add configuration options for Jasmine here
+        // the possible options are listed at https://jasmine.github.io/api/edge/Configuration.html
+        // for example, you can disable the random execution with `random: false`
+        // or set a specific seed with `seed: 4321`
+      },
+      clearContext: false // leave Jasmine Spec Runner output visible in browser
+    },
+    jasmineHtmlReporter: {
+      suppressAll: true // removes the duplicated traces
+    },
+    coverageReporter: {
+      dir: require('path').join(__dirname, './coverage/project'),
+      subdir: '.',
+      reporters: [
+        { type: 'html' },
+        { type: 'text-summary' }
+      ]
+    },
+    reporters: ['progress', 'kjhtml'],
+    port: 9876,
     colors: true,
     concurrency: 1,                  // Run each browser's tests sequentially.
     logLevel: config.LOG_INFO,
-...
+    autoWatch: true,
+    browsers: ['Chrome'],
+    singleRun: false,
+    restartOnFileChange: true,
+    browserNoActivityTimeout: 40000,
+    pact: [{
+      cors: true,
+      port: 1234,
+      consumer: 'bcfinal-theatermanagement-spa',
+      provider: 'bcfinal-theatermanagement-bff',
+      logLevel: 'DEBUG',
+      log: path.resolve(process.cwd(), 'logs', 'pact.log'),
+      dir: 'pacts'
+    }]
+  });
+};
 ~~~
 
-Commit with comment "Sequential tests in multiple browsers"
+## Deploy
 
-PR, approve and merge to main.
+Commit with comment "Karma now auto launches the local Pact server"
+
+Push, create a pull request, complete the pull request and delete the branches.
